tests/rosetta/out/Go/conditional-structures-3.error
parse: error[P001]: tests/rosetta/x/Mochi/conditional-structures-3.mochi:6:5: unexpected token "else" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> tests/rosetta/x/Mochi/conditional-structures-3.mochi:6:5

  6 |   } else if b {
    |     ^

help:
  Check for a missing `{` or `}` to close the block.